# pde-dsl

./: CMakeLists.txt  LICENSE  README.md
backend/: main.cpp
test/compiler-test/: README.md
test/compiler-test/headEquation/: 1DheadEquation.mlir
test/compiler-test/navistokeEquation/SWE/structuredmesh/: 2D_shallow_water_equations.mlir
